# playground

c/kr/: kr_string.c  kr_string.txt
composer-db/: README.md  interface.h  main.cpp  utility.h
cpp-misc/: main.cpp  utility.h
furi/: furi.js  index.html
goodreads/: 1-50.csv  1001-2000.csv  101-200.csv  2001-3000.csv  201-300.csv  3001-4000.csv  4001-5000.csv  401-1000.csv  4495-5000.csv  5001-6000.csv  51-100.csv  6001-8000.csv  goodreads-10000-12000.csv  goodreads-12001-15000.csv  goodreads-15001-20000.csv  goodreads-20001-25000.csv  goodreads-8001-9200.csv  goodreads-9201-10000.csv  scan.py
iq-simulator/: generation.php  main.php
omdb/: 1-50.csv  1651-2000.csv  2001-2500.csv  2501-3000.csv  3001-3800.csv  51-2000.csv  652-2000.csv  omdb-10000-11000.csv  omdb-11001-12000.csv  omdb-3801-4700.csv  omdb-4701-5600.csv  omdb-5601-6500.csv  omdb-6501-7400.csv  omdb-7401-8300.csv  omdb-8301-9200.csv  omdb-9201-10000.csv  scan.py
pacific-datamaps/: index.html
php/: beadsort.php
piano-to-lilypond/: .env.example  .gitignore  README.md  pyproject.toml  setup.sh
piano-to-lilypond/src/piano_to_lilypond/: __init__.py  __main__.py  cli.py  config.py  deps.py  extract.py  lilypond.py  models.py  musicxml.py  pipeline.py  transcribe.py
piano-to-lilypond/src/piano_to_lilypond/prompts/: lilypond_system.txt
piano-to-lilypond/tests/: test_lilypond.py  test_musicxml.py
pokemon/: index.html
python/: shuffle_filename.py  stair_step.py
python-misc/: guess_number.py
raindrop/: random.html  random.js
stylus/: googledocs.js  googlesheets.js  stylus.js  tampermonkey.js
(+19 files in other folders)
