[project]
name = "piano-to-lilypond"
version = "0.1.0"
description = "YouTube piano performance to LilyPond sheet music pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "yt-dlp>=2024.0.0",
    "music21>=9.1.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "piano-transcription-inference>=0.0.6",
    "torch>=2.0.0",
]

# Optional; not installed by setup.sh — basic-pitch may require Python 3.10–3.11 on macOS
# (tensorflow-macos wheels). Default "piano" backend works on 3.10–3.12.
[project.optional-dependencies]
transcribe-basic = [
    "basic-pitch>=0.4.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
piano-to-lilypond = "piano_to_lilypond.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
piano_to_lilypond = ["prompts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
